[package]
name = "tendermint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1", features = ["full", "sync"] }

secp256k1 = { version = "0.24.0", features = ["rand"] }
rand = "0.8.5"
sha3 = "0.10.0"
tokio-stream = { version = "0.1", features = ["sync"] }

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
serde_canonical_json = "1.0.0"
